--- a/_posts/2022-10-14-Linux实用配置记录.md
+++ b/_posts/2022-10-14-Linux实用配置记录.md
@@ -4,7 +4,7 @@ title: Linux 实用配置记录
 date: 2024-05-13 19:36:53
 description: Linux 系统软件配置和常见错误解决方案的记录
 tags: system
-categories: tool, code
+categories: tool code
 featured: false
 giscus_comments: true
 related_posts: true
