--- a/_posts/2024-05-26-机箱风扇控制.md
+++ b/_posts/2024-05-26-机箱风扇控制.md
@@ -3,7 +3,7 @@ layout: post
 title: 机箱风扇控制
 date: 2024-05-26 19:06:14
 description: 设定温度曲线控制机箱风扇速度
-tags: windows
+tags: system
 categories: tool
 featured: false
 giscus_comments: true
@@ -14,11 +14,11 @@ toc:
 
 ## 碎碎念
 
-之前一直没有觉得自己 ATX 主机的风扇很吵，但在前几天新装了台 ITX 小主机后，愈发觉得现在使用的 ATX 主机是真的吵。尤其是将它和被我认为非常吵的 mini 主机放在一起时，mini 主机都显得很安静了。我怀疑之前没有察觉的原因是，ATX 主机风扇吵得很均匀，而 mini 主机得风扇转速在系统高负载时会瞬时拉升，一会安静一会吵，使我很难受。
+之前一直没有觉得自己 ATX 主机的风扇很吵，但在前几天新装了台 ITX 小主机后，愈发觉得现在使用的 ATX 主机是真的吵。尤其是将它和被我认为非常吵的 mini 主机放在一起时，mini 主机都显得很安静了。我猜，之前没有注意到的原因是，ATX 主机风扇的噪音很均匀，而 mini 主机的风扇在系统高负载时会瞬时加速，一会儿安静一会儿吵，让我很不适应。
 
-主板自带的风扇调速，只提供了两种方式，依赖于 Motherboard 的温度或 CPU 的温度，但我把 CPU 低温度下的风扇转速拉到极低后，好像并没有生效。可能是铭瑄的 BIOS 太垃圾了，也可能是我的机箱风扇不行了？
+主板自带的风扇调速功能，只提供了两种方式：依赖于主板温度或 CPU 温度，但我将 CPU 低温时的风扇转速调到极低后，似乎并没有效果。可能是铭瑄的 BIOS 太差劲了，也可能是我的机箱风扇不行了？
 
-机箱风扇，在什么时候需要高速运转呢？一般是显卡高负载时。而主板自带的风扇调速，依赖于主板的温度传感器。我们的发热大户并不是主板，主板只是间接受热。这之间存在着误差。根据显卡温度进行机箱风扇调速，这才是正解。但 BIOS 里并不能这么设定。
+机箱风扇什么时候需要高速运转呢？一般是在显卡高负载时。而主板自带的风扇调速依赖于主板的温度传感器，但主板并不是主要发热源，只是间接受热，这之间存在误差。根据显卡温度调节机箱风扇速度才是正解，但 BIOS 里无法这样设置。
 
 我在 GitHub 上找到个小软件`FanControl`，功能还挺强的，特此记录下来。
 
