--- a/_posts/2024-06-16-我的表达欲在递减.md
+++ b/_posts/2024-06-16-我的表达欲在递减.md
@@ -12,7 +12,7 @@ related_posts: false
 
 > 我常常感受到思绪纷飞，灵感源源不断。一旦坐下来正儿八经打算在文档里写一些东西来表达我的“情感”，刚才那些火花四溅的念头却好像从没来过一样，最后只能悻悻地按下删除，让一切归于沉寂。
 
-在过去几年中，我在微信朋友圈和QQ空间的分享频率有了明显的减少。2020年我发布了12条动态，而到了2021年和2022年，每年只发布了6条。2023年有所回升，发布了10条。更值得一提的是我的博客状况：2020年我在学习编程语言时，发表了三十多篇笔记和算法刷题的博客文章，吸引了近1000名粉丝和数千次收藏。2021年我开始进行科研训练，发布了一些关于模型算法的文章，共十几篇。然而到了2022年和2023年，我竟然没有更新任何博客文章。其实我一直在写，所有内容都保存在电脑本地，虽然进行了有序归类，但没有上传到任何公共平台。
+在过去几年中，我在微信朋友圈和QQ空间的分享频率有了明显的减少。2020年我发布了12条动态，而到了2021年和2022年，每年只发布了6条。2023年有所回升，发布了10条。更值得一提的是我的博客状况：2020年我在学习编程语言时，发表了三十多篇笔记和算法刷题的博客文章，吸引了近1000名粉丝和数千次收藏。2021年我开始进行科研训练，发布了一些关于模型算法的文章，共十几篇。然而到了2022年和2023年，我竟然没有更新任何博客文章。
 
 随着知识的增长和人生经验的积累，我发现自己的表达欲在递减。当周围的人在享受节日的欢乐和活动的热闹，我感觉自己就像是在旁观者的位置，看着这一切却难以投入其中。那些曾让我兴奋的活动，现在似乎成了日常生活的一部分，不再给我带来特别的感觉。这种淡漠感让我有些困惑，但这并非是对生活失去热情。当我遇到真正吸引我的事物，如有趣的知识点、新技能，抑或是运动时，我仍能全情投入，享受其中。在取得一些成就或奖励时，我仍会感到激动，但这种激动感通常很快就会平息。我对这种心理变化进行了深思，不明白这是心理状态的成长，还是心理疾病的表现，我决定将我想到的一些东西记录下来。
 
