--- a/_posts/2022-11-21-Windows实用配置记录.md
+++ b/_posts/2022-11-21-Windows实用配置记录.md
@@ -4,7 +4,7 @@ title: Windows实用配置记录
 date: 2024-04-05 15:09:00
 description: Windows系统软件配置和常见错误解决方案的记录
 tags: system
-categories: tool, code
+categories: tool code
 featured: false
 giscus_comments: false
 related_posts: true
