--- a/_posts/2023-10-24-如何提升论文的可读性.md
+++ b/_posts/2023-10-24-如何提升论文的可读性.md
@@ -4,7 +4,7 @@ title: 如何提升论文的可读性
 date: 2023-10-24 22:02:00
 description: 摘录自[Writing science - Joshua Schimel]
 tags: formatting
-categories: paper, collection
+categories: paper collection
 featured: false
 giscus_comments: true
 related_posts: true
