--- a/_posts/2022-09-01-建立你的记录.md
+++ b/_posts/2022-09-01-建立你的记录.md
@@ -56,19 +56,19 @@ related_posts: true
 
 一直建议学生保留记录，不是为他人，是为学生自己：最关心自己历史的只可能是自己。
 
-最近，我读研究生的旧金山加州大学Jan Lab室有张照片，冰箱里面有以前在实验室待过的人的实验用品，有一个盒子标记是我，1991（离开时间）。
+最近，我读研究生的旧金山加州大学 Jan Lab 室有张照片，冰箱里面有以前在实验室待过的人的实验用品，有一个盒子标记是我，1991（离开时间）。
 
 <img src="https://xwj770427414.oss-cn-beijing.aliyuncs.com/img/%E5%BB%BA%E7%AB%8B%E4%BD%A0%E7%9A%84%E8%AE%B0%E5%BD%95_1.png" alt="Image-1" style="zoom: 33%;" />
 
-我估计是DNA。那时DNA是宝贝，克隆一个基因是我在美国六年研究生的主体工作（此前，我在上海还有两年研究生，八年期间从未觉得时间长)
+我估计是 DNA。那时 DNA 是宝贝，克隆一个基因是我在美国六年研究生的主体工作（此前，我在上海还有两年研究生，八年期间从未觉得时间长)
 
-这种基因克隆到现在也不是靠PCR就可以，而是需要根据果蝇表型，找到突变所在的DNA。得到之后，再把正常的DNA重新引入突变果蝇，能够救活突变的果蝇。整个过程类似找到病人有突变的DNA，再用正常DNA重新引入病人体内进行基因治疗，证明这段DNA确实携带与疾病由因果关系的基因（这是类别，当时无法对人这样做，对果蝇可以)。
+这种基因克隆到现在也不是靠 PCR 就可以，而是需要根据果蝇表型，找到突变所在的 DNA 。得到之后，再把正常的 DNA 重新引入突变果蝇，能够救活突变的果蝇。整个过程类似找到病人有突变的 DNA ，再用正常 DNA 重新引入病人体内进行基因治疗，证明这段 DNA 确实携带与疾病由因果关系的基因（这是类别，当时无法对人这样做，对果蝇可以)。
 
 <img src="https://xwj770427414.oss-cn-beijing.aliyuncs.com/img/%E5%BB%BA%E7%AB%8B%E4%BD%A0%E7%9A%84%E8%AE%B0%E5%BD%95_2.png" alt="Image-2" style="zoom: 33%;" />
 
-显示一段DNA，两个独立的转座子插入突变，三个小段缺失突变。PWB是用于“基因治疗”的片段，通过转座子引入果蝇，并证明可以治疗突变的表型。
+显示一段 DNA，两个独立的转座子插入突变，三个小段缺失突变。PWB 是用于“基因治疗”的片段，通过转座子引入果蝇，并证明可以治疗突变的表型。
 
-这样一想，在1980年代从克隆基因到再引入基因进行“基因治疗“全过程都做过的中国留学生，有可能不超过十人。当时在高等动物（老鼠、人）一般都只做一半（克隆基因、或者转基因）。做人的基因治疗的研究者，一般没有做过克隆基因。做克隆基因的研究者，一般不做基因治疗。因为克隆和“治疗”两步都很麻烦，当时一般只做一步。
+这样一想，在 1980 年代从克隆基因到再引入基因进行“基因治疗“全过程都做过的中国留学生，有可能不超过十人。当时在高等动物（老鼠、人）一般都只做一半（克隆基因、或者转基因）。做人的基因治疗的研究者，一般没有做过克隆基因。做克隆基因的研究者，一般不做基因治疗。因为克隆和“治疗”两步都很麻烦，当时一般只做一步。
 
 研究低等动物的，如果蝇和线虫，我们都是两步都做。
 
@@ -84,7 +84,7 @@ related_posts: true
 
 不幸的是，回北大的十四年搬了五个实验室，期间终于出现了遗失的问题。
 
-我回中国的2007年，北大给的实验室很小（实验空间加办公室为60平方米），我就只好继续用北京生命科学研究所的实验室。为了北大生命科学的招聘，那时还不能暴露空间有限的问题，只能逐渐解决。
+我回中国的 2007 年，北大给的实验室很小（实验空间加办公室为 60 平方米），我就只好继续用北京生命科学研究所的实验室。为了北大生命科学的招聘，那时还不能暴露空间有限的问题，只能逐渐解决。
 
 有几年每天来回（一般是上午北大办公，下午北生所实验室）。在北大几年后有一百多平方米的实验室，但两间分别在楼道的两段，其中一间紧邻洗手间，不是非常好工作。
 
@@ -92,7 +92,7 @@ related_posts: true
 
 我花了较大气力，各种办法扩大北大校本部的生命科学空间。其中一个方法是分布在不同方面，不都在生命科学学院，因为如果几个空间都在生科院会难以得到学校一再支持。
 
-空间方面最大的工作是新建生命科学科研楼（后称吕志和楼），2009年得到学校同意，历经各种…，于2019年4月12日，我自己的实验室也搬进新楼，空间问题完全解决。
+空间方面最大的工作是新建生命科学科研楼（后称吕志和楼），2009 年得到学校同意，历经各种…，于 2019 年 4 月 12 日，我自己的实验室也搬进新楼，空间问题完全解决。
 
 因为是在生命科学学院/学科空间解决之后，所以称之为“后生命科学之乐而乐”。
 
