--- a/_posts/2024-06-16-我的表达欲在递减.md
+++ b/_posts/2024-06-16-我的表达欲在递减.md
@@ -12,7 +12,7 @@ related_posts: false
 
 > 我常常感受到思绪纷飞，灵感源源不断。一旦坐下来正儿八经打算在文档里写一些东西来表达我的“情感”，刚才那些火花四溅的念头却好像从没来过一样，最后只能悻悻地按下删除，让一切归于沉寂。
 
-在过去几年中，我在微信朋友圈和QQ空间的分享频率有了明显的减少。2020年我发布了12条动态，而到了2021年和2022年，每年只发布了6条。2023年有所回升，发布了10条。更值得一提的是我的博客状况：2020年我在学习编程语言时，发表了三十多篇笔记和算法刷题的博客文章，吸引了近1000名粉丝和数千次收藏。2021年我开始进行科研训练，发布了一些关于模型算法的文章，共十几篇。然而到了2022年和2023年，我竟然没有更新任何博客文章。
+在过去几年中，我在微信朋友圈和 QQ 空间的分享频率有了明显的减少。2020 年发布了 12 条动态，而到了 2021 年和 2022 年，每年只发布了 6 条。2023 年有所回升，发布了 10 条。更值得一提的是我的博客状况：2020 年在学习编程语言时，发表了三十多篇笔记和算法刷题的博客文章，吸引了近 1000 名粉丝和数千次收藏。2021 年开始进行科研训练，发布了一些关于模型算法的博客文章，共十几篇。然而， 2022 年和 2023 年我竟然没有更新任何博客文章。
 
 随着知识的增长和人生经验的积累，我发现自己的表达欲在递减。当周围的人在享受节日的欢乐和活动的热闹，我感觉自己就像是在旁观者的位置，看着这一切却难以投入其中。那些曾让我兴奋的活动，现在似乎成了日常生活的一部分，不再给我带来特别的感觉。这种淡漠感让我有些困惑，但这并非是对生活失去热情。当我遇到真正吸引我的事物，如有趣的知识点、新技能，抑或是运动时，我仍能全情投入，享受其中。在取得一些成就或奖励时，我仍会感到激动，但这种激动感通常很快就会平息。我对这种心理变化进行了深思，不明白这是心理状态的成长，还是心理疾病的表现，我决定将我想到的一些东西记录下来。
 
@@ -34,11 +34,10 @@ related_posts: false
 
 逐渐远离分享的心态。在雁栖湖时的那=某天傍晚，我走出公寓，眼前的夕阳和周围的云朵展现了一幅令人震撼的画面。夕阳呈现出一种无法用语言描述的特殊颜色，散发出炽热而柔和的光辉，周围的云朵则像是被染色的棉絮，以一种难以言喻的方式围绕着太阳。夕阳被云彩环抱，光与影的交错让整个天空都显得既神秘又迷人。我被这景色定住了脚步，目不转睛，然后掏出手机拍下照片，再照常干饭。身边很多人都拍照发了朋友圈，而我没有这个想法，只是觉得应该记录下来。这与我刚上本科时的心态大不相同，那时的我热衷于记录身边的一切，无论是自然景观还是日常琐事，都乐于通过镜头记录并与人分享。这种心理上的变化让我感到困惑。我不确定这种变化是好是坏。是我变得更能沉浸于当下的体验，还是我失去了与他人分享美好瞬间的热情？这是否反映了我对世界的感知方式和与人交流的方式都在悄然变化？这种改变背后的原因是什么，我尚未能够完全理解。
 
-## 该不该相信人格特征
+## 人格特征
 
-之前我常常看到别人讨论性格分类，比如将自己划分为 I 人（内向型）或 E 人（外向型）。这种分类方法引起了我的好奇，于是某天我也决定花点时间来测试一下自己的性格。通过一个在线性格测试，结果显示我属于[INTP-A / "逻辑学家"人格](https://www.16personalities.com/intp-personality)。最初我对这种标签持怀疑态度，不太愿意接受这种将复杂的个体性格归纳为几个字母的方式。我甚至试图说服自己，这不过是“巴纳姆效应”——一种心理现象，让人觉得非常泛泛的描述似乎非常贴切地描述了自己的特点。
+之前我常常看到别人讨论性格分类，比如将自己划分为 I 人（内向型）或 E 人（外向型）。这种分类方法引起了我的好奇，于是某天我也决定花点时间来测试一下自己的性格。通过一个在线性格测试，结果显示我属于[INTP-A / "逻辑学家"人格](https://www.16personalities.com/intp-personality)。最初我对这种标签持怀疑态度，不太愿意接受这种将复杂的个体性格归纳为几个字母的方式。我甚至试图说服自己，这不过是“巴纳姆效应”，让人觉得非常泛泛的描述似乎非常贴切地描述了自己的特点。
 
-然而，当我仔细阅读了关于INTP性格的详细描述后，不得不承认，其中的部分内容与我实际的性格和行为模式确实有着惊人的相似之处。INTP-A被描述为极具创造性、逻辑性强、独立和理论化的人格类型。他们喜欢独立思考，常常沉浸于抽象的理论之中，对如何能够改进或创新现有的系统表现出极大的兴趣。这种描述触及了我的思考方式、决策习惯以及我与人交往的方式。尽管我对此保持一定的批判性思考，但内心深处，我确实感到这些描述在某种程度上揭示了我处理问题和与世界互动的独特方式。
+然而，当我仔细阅读了关于 INTP 性格的详细描述后，不得不承认，其中的部分内容与我实际的性格和行为模式确实有着惊人的相似之处。INTP-A 被描述为极具创造性、逻辑性强、独立和理论化的人格类型。他们喜欢独立思考，常常沉浸于抽象的理论之中，对如何能够改进或创新现有的系统表现出极大的兴趣。这种描述触及了我的思考方式、决策习惯以及我与人交往的方式。尽管我对此保持一定的批判性思考，但内心深处，我确实感到这些描述在某种程度上揭示了我处理问题和与世界互动的独特方式。
 
-INTP-A 种的“A”代表 Assertive（自信的）。这个后缀反映了一种相对稳定、自信和自我驱动的态度，这与 INTP-T（Turbulent，动荡的）形成对比。INTP-A 类型的人在面对挑战和压力时通常表现出更加平静和自信的态度。他们倾向于对自己的能力和决策过程有更高的自信，不太受外界评价的干扰。这种个性类型也倾向于高度分析和批判，有时会导致决策过程显得过于复杂和缓慢。他们在面对需要快速反应的情况时可能表现得不那么果断。这样的性格特征在我的日常生活和工作中表现得非常明显，尤其是在需要做出重要决策或在社交场合中。这让我开始重新思考性格分类的意义，也许它们并不是将人简单地框定在某个模式中，而是提供了一种自我认识和理解的工具，帮助我更好地认识自己。
-
+INTP-A 中的“A”代表 Assertive（自信的）。这个后缀反映了一种相对稳定、自信和自我驱动的态度，这与 INTP-T（Turbulent，动荡的）形成对比。INTP-A 类型的人在面对挑战和压力时通常表现出更加平静和自信的态度。他们倾向于对自己的能力和决策过程有更高的自信，不太受外界评价的干扰。这种个性类型也倾向于高度分析和批判，有时会导致决策过程显得过于复杂和缓慢。他们在面对需要快速反应的情况时可能表现得不那么果断。这样的性格特征在我的日常生活和工作中表现得非常明显，尤其是在需要做出重要决策或在社交场合中。这让我开始重新思考性格分类的意义，也许它们并不是将人简单地框定在某个模式中，而是提供了一种自我认识和理解的工具，帮助我更好地认识自己。
