--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,8 @@
+---
+---
+
+@string{aps = {American Physical Society,}}
+
 @article{SuoWeiLanYiZhiBiaoCuPingGuYiPingGuZhuTiShengYiTiShengWenBaoZhang2024,
   title       = {{以指标促评估  以评估助提升  以提升稳保障------绘制应急物资保障弹性能力画像}},
   author      = {Suo, Weilan and Xu, Wenjie and Zhang, Jing and Sun, Xiaolei},
