--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,7 +40,9 @@
   html        = {https://doi.org/10.1007/s11042-023-14497-9},
   pdf         = {wangDeepLearningbasedNonlinear2023.pdf},
   bibtex_show = {true},
-  preview     = {wangDeepLearningbasedNonlinear2023.png}
+  preview     = {wangDeepLearningbasedNonlinear2023.png},
+  dimensions={true},
+  gscholar={true}
 }
 
 @article{wangDepthFeatureExtractionbased2022,
@@ -62,7 +64,9 @@
   pdf         = {wangDepthFeatureExtractionbased2022.pdf},
   bibtex_show = {true},
   abbr        = {DSP},
-  preview     = {wangDepthFeatureExtractionbased2022.png}
+  preview     = {wangDepthFeatureExtractionbased2022.png},
+  dimensions={true},
+  gscholar={true}
 }
 
 @article{wangNovelAirQuality2022,
@@ -83,7 +87,9 @@
   html        = {https://doi.org/10.1016/j.chaos.2022.112098},
   pdf         = {wangNovelAirQuality2022.pdf},
   bibtex_show = {true},
-  preview     = {wangNovelAirQuality2022.png}
+  preview     = {wangNovelAirQuality2022.png},
+  dimensions={true},
+  gscholar={true}
 }
 
 @article{wangTwostageDeepLearning2022,
@@ -105,7 +111,9 @@
   html        = {https://doi.org/10.1007/s00477-022-02202-5},
   pdf         = {wangTwostageDeepLearning2022.pdf},
   bibtex_show = {true},
-  preview     = {wangTwostageDeepLearning2022.png}
+  preview     = {wangTwostageDeepLearning2022.png},
+  dimensions={true},
+  gscholar={true}
 }
 
 @article{xuOptimizedDecompositionIntegration2022,
@@ -125,7 +133,9 @@
   abbr        = {AOR},
   pdf         = {xuOptimizedDecompositionIntegration2022.pdf},
   bibtex_show = {true},
-  preview     = {xuOptimizedDecompositionIntegration2022.png}
+  preview     = {xuOptimizedDecompositionIntegration2022.png},
+  dimensions={true},
+  gscholar={true}
 }
 
 @article{xuResilienceAssessmentEmergency2023,
@@ -144,5 +154,7 @@
   html        = {https://doi.org/10.1016/j.procs.2023.08.046},
   pdf         = {xuResilienceAssessmentEmergency2023.pdf},
   bibtex_show = {true},
-  preview     = {xuResilienceAssessmentEmergency2023.png}
+  preview     = {xuResilienceAssessmentEmergency2023.png},
+  dimensions={true},
+  gscholar={true}
 }
