Correct some errors

--- a/_posts/2023-10-24-如何提升论文的可读性.md
+++ b/_posts/2023-10-24-如何提升论文的可读性.md
@@ -14,7 +14,7 @@ toc:
   sidebar: right
 ---
 
-> 摘录自[Writing science: how to write papers that get cited and proposals that get funded]([Writing Science - Paperback - Joshua Schimel - Oxford University Press (oup.com)](https://global.oup.com/academic/product/writing-science-9780199760244?cc=us&lang=en&))
+> 摘录自*Writing science: how to write papers that get cited and proposals that get funded*
 
 ## Writing in Science
 
