--- a/_posts/2023-05-06-我的常用工具.md
+++ b/_posts/2023-05-06-我的常用工具.md
@@ -24,7 +24,7 @@ toc:
 - **办公工具：**[Zotero](https://www.zotero.org/)（文献管理），[Simple Tex](https://simpletex.cn/)（公式识别），[欧路词典](https://dict.eudic.net/)， [Typora](https://typoraio.cn/)，[SiYuan](https://b3log.org/siyuan/download.html)，[Office 365](https://www.office.com/)，[Visio](https://www.microsoft.com/zh-cn/microsoft-365/visio/flowchart-software?msockid=2ac09e93141c66d8007b8af415ee6705)，[Draw.io](https://www.drawio.com/)，[网易邮箱大师](https://dashi.163.com/index.html)，[OneMore](https://github.com/stevencohn/OneMore)
 - **Windows工具**：[PowerToys](https://docs.microsoft.com/en-us/windows/powertoys/install)（Windows 工具集），[Twinkle Tray](https://twinkletray.com/)（多显示器控制），[PicGO](https://picgo.github.io/PicGo-Doc/zh/)（图床），[Geek Uninstaller](https://geekuninstaller.com/)（干净卸载软件）、[IDM](https://www.internetdownloadmanager.com/)（下载），[Adobe Acrobat DC](https://blog.csdn.net/Lorrey_/article/details/131449697)（PDF编辑器），[Clash](https://github.com/clashdownload/Clash)，[Google Chrome](https://www.google.com/intl/zh-CN/chrome/)，[Microsoft Edge](https://www.microsoft.com/zh-cn/edge/download)，[Nanazip](https://github.com/M2Team/NanaZip)（解压缩），[Dolby Access](https://apps.microsoft.com/detail/9n0866fs04w8?hl=zh-cn&gl=CN)
 - **效率工具**：[Everything](https://www.voidtools.com/zh-cn/downloads/)（文件搜索），[uTools](https://u.tools)（快速启动工具平台），[PixPin](https://pixpinapp.com/)（截图），[Seer](http://1218.io/)（预览）， [Xmind](https://xmind.cn/)（思维导图），[Coodesker](https://www.coodesker.com/)（桌面整理），[Bandicam](https://www.bandicam.com/downloads/)（录屏）
-- **网盘存储：** [OneDrive](https://www.microsoft.com/en-sg/microsoft-365/onedrive/online-cloud-storage)，[百度网盘](https://pan.baidu.com/)， [阿里云盘](https://www.aliyundrive.com/download)，[夸克网盘](https://pan.quark.cn/)，[InfiniCloud](https://infini-cloud.net/en/index.html)
+- **网盘存储：** [OneDrive](https://www.microsoft.com/en-sg/microsoft-365/onedrive/online-cloud-storage)，[百度网盘](https://pan.baidu.com/)， [阿里云盘](https://www.aliyundrive.com/download)，[InfiniCloud](https://infini-cloud.net/en/index.html)
 - **影音娱乐：** [Potplayer](https://potplayer.daum.net/)、[网易云音乐](https://music.163.com/)，[哔哩哔哩](https://www.bilibili.com/)，[Steam](https://store.steampowered.com/)，[Epic](https://www.epicgames.com/site/zh-CN/home)，[UU加速器](https://uu.163.com/)，[Yuzu](https://yuzu-mirror.github.io/)，[雷神加速器](https://www.leigod.com/)，[Magpie](https://github.com/Blinue/Magpie)（强制全屏）
 
 ## 注意事项
