correct some error

--- a/_posts/2023-05-06-我的常用工具.md
+++ b/_posts/2023-05-06-我的常用工具.md
@@ -4,8 +4,12 @@ title: 我的常用工具
 date: 2023-05-26 10:30:00
 last_updated: 2024-07-25 15:31:33
 description: 专业工具解决专业问题
-tags: system
-categories: tool
+tags:
+  - system
+  - productivity
+  - software
+categories:
+  - tool
 featured: false
 giscus_comments: false
 related_posts: true
